--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-06-phonebook",
+  "name": "phonebook",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://RadkoIvanUa.github.io/goit-react-hw-06-phonebook/",
