--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phonebook",
+  "name": "goit-react-hw-06-phonebook",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://RadkoIvanUa.github.io/goit-react-hw-06-phonebook/",
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "nanoid": "^4.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
